# abf-capacity-calculator

./: .claudeteam.md  .firebaserc  .gitignore  ANALYSIS_CONTRACT.md  ANALYTICS_GUIDE.md  DEVELOPMENT.md  FIREBASE_ARCHITECTURE.md  Makefile  README.md  SMOKE_TEST_CHECKLIST.md  UI_GUIDELINES.md  docker-compose.yml  firebase.json  firestore.rules  index.html
.claude/: MULTI_AGENT_GUIDE.md  PRODUCT_RISK_CODE_QUALITY_PLAN.md  settings.json
.claude/agents/: i18n-reviewer.md  implementer.md  orchestrator.md  researcher.md  reviewer.md  tester.md
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
.github/workflows/: deploy.yml
_archived_backend/backend/: init.sql  main.py  requirements.txt
_archived_backend/database/: init.sql
assets/: index-BBQjAJuD.js  index-CpTd-acK.js  index-CyQsLRSi.js  index-Dhyi-2OZ.js  index-fUDuShMD.js  index-oAhMllEy.js  index-unuyC4lI.js
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/config/: database.py
backend/app/core/: __init__.py  calculation_engine.py  layer_calculator.py
backend/services/: calculation_engine.py
docs/: AI_BRIEF_EXPORT.md  DECISION_ANALYSIS_QA.md  MERGE_BASELINE_GUARD_POLICY.md  README_INDEX.md  WORKSPACE_COLLABORATION.md  WORKSPACE_SMOKE_TEST.md
docs/ai-copilot/: CC_V1_38_AI_DATA_COPILOT_MVP_PROMPT.md  (+28 more)
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
functions/: package-lock.json  package.json  tsconfig.json
scripts/: verify-release-baseline.cjs
task/: QWEN_FIREBASE_REBUILD_PROMPT.md
(+554 files in other folders)
