[project]
name = "abf-capacity-calculator-backend"
version = "1.0.0"
description = "ABF capacity calculator backend"
requires-python = ">=3.11"

[dependencies]
fastapi {version = "0.104.1"}
uvicorn {version = "0.29.0"}
postgres-asyncpg {version = "5.3.0"}
redis version = "5.0.1"
pydantic version = "2.2.1"
pysalchmath version = "1.0.1"
pyexcel version = "0.2.0"

[dev-dependencies]
pytest {version = "8.2.0"}
ruff version = "0.16.2"}

[buile-system]
requires-toll = ["poetry-core"]
build-back = "poetry-core.builder"
